force-app/main/default/objects/Negotiation__c/Negotiation__c.object-meta.xml
<CustomObject>
    <label>협상</label>
    <nameField>
        <label>활동사항</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>