force-app/main/default/objects/Negotiation__c/fields/LinkedRecordId__c.field-meta.xml
<CustomField>
    <fullName>LinkedRecordId__c</fullName>
    <label>LinkedRecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>