force-app/main/default/objects/Negotiation__c/fields/SalesStage__c.field-meta.xml
<CustomField>
    <fullName>SalesStage__c</fullName>
    <label>SalesStage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>우선협상</fullName>
            </value>
            <value>
                <fullName>조건변경 및 추가제안</fullName>
            </value>
            <value>
                <fullName>수주 가능성 파악</fullName>
            </value>
            <value>
                <fullName>선정경과 및 순위파악</fullName>
            </value>
            <value>
                <fullName>해당없음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>