force-app/main/default/objects/Negotiation__c/validationRules/StartEndDateTimeValidCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>StartEndDateTimeValidCheck</fullName>
    <active>true</active>
    <description>시행종료일시가 시행시작일시보다 빠를 경우</description>
    <errorConditionFormula>StartDateTime__c &gt;= EndDateTime__c</errorConditionFormula>
    <errorMessage>시행종료일시를 시행시작일시 이후로 설정해주세요</errorMessage>
</ValidationRule>